deploy/base/seaweed-s3/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: seaweed-s3-entry
spec:
  podSelector:
    matchLabels:
      app: seaweed-s3-entry
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          object-store-client: 'true'
    ports:
    - protocol: TCP
      port: 8333
  egress:
  - to:
    - ipBlock:
        cidr: 10.4.4.2/32
    - ipBlock:
        cidr: 10.4.4.8/32
    - ipBlock:
        cidr: 10.4.4.5/32
    ports:
    - protocol: TCP
      port: 8333
    - protocol: TCP
      port: 8888
